2011-01-27  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::subsasgn,
	octave_scalar_struct::subsasgn): Call undef_subsasgn on object
	returned by octave_value::empty_conv if LHS is initially undefined.
	Bug #32242.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* input.cc (input_event_hook): Fix incorrect use of iterator.
	Reported by Pascal Dupuis <Pascal.Dupuis@worldonline.be>.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (octave_class::reconstruct_exemplar):
	Call constructor with do_multi_index_op instead of feval.
	Verify that symbol_table::find_method did return a class
	constructor for the correct type.  Bug #32242.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* lex.ll, graphics.cc, gl-render.cc, ov-mex-fcn.h, graphics.h.in:
	Delete trailing whitespace.

2011-01-26  John W. Eaton  <jwe@octave.org>

	Bug #32242.

	* ov.h, ov.cc (octave_value::undef_subsasgn): New function.
	* ov-class.h, ov-class.cc (octave_class::undef_subsasgn,
	octave_class::subsasgn_common): New functions.
	* ov-base.h, ov-base.cc (octave_base_value::subsasgn): If
	undefined, call undef_subsasgn on object returned by
	octave_value::empty_conv.
	(octave_base_value::undef_subsasgn): New virtual function.
	(octave_base_value::subsasgn): Only handle case of undefined
	values here.

2011-01-26  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>
	    John W. Eaton  <jwe@octave.org>

	* graphics.h.in (scaler::scaler (const std::string&)): New constructor.
	(graphics_handle::operator++, graphics_hanlde::operator--):
	Implement as recommended by Effective C++.

	* graphics.h.in (class base_property, class array_property,
	class children_property, class property, class graphics_xform,
	class graphics_event): Explicitelly iniatialize
	all data members in constructor initialisation list.
	* gl-render.cc (class patch_tesselator): Likewise
	* graphics.cc (class radio_values, class gh_manager),
	(class callback_event, class set_event): Likewise.
